// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`IconTipsLabel should match snapshot 1`] = `
<body>
  <div>
    <div
      class="ant-space css-dev-only-do-not-override-txh9fw ant-space-horizontal ant-space-align-center"
    >
      <div
        class="ant-space-item"
        style="margin-right: 8px;"
      >
        <p>
          123
        </p>
      </div>
      <div
        class="ant-space-item"
      >
        <span
          class="anticon icon-tip"
          role="img"
        >
          <svg
            fill="none"
            height="14"
            viewBox="0 0 14 14"
            width="14"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M6.99999 12.8333C3.77824 12.8333 1.16666 10.2217 1.16666 6.99996C1.16666 3.77821 3.77824 1.16663 6.99999 1.16663C10.2217 1.16663 12.8333 3.77821 12.8333 6.99996C12.8333 10.2217 10.2217 12.8333 6.99999 12.8333ZM6.99999 11.6666C8.23767 11.6666 9.42465 11.175 10.2998 10.2998C11.175 9.42462 11.6667 8.23764 11.6667 6.99996C11.6667 5.76228 11.175 4.5753 10.2998 3.70013C9.42465 2.82496 8.23767 2.33329 6.99999 2.33329C5.76231 2.33329 4.57533 2.82496 3.70016 3.70013C2.82499 4.5753 2.33332 5.76228 2.33332 6.99996C2.33332 8.23764 2.82499 9.42462 3.70016 10.2998C4.57533 11.175 5.76231 11.6666 6.99999 11.6666ZM6.41666 4.08329H7.58332V5.24996H6.41666V4.08329ZM6.41666 6.41663H7.58332V9.91663H6.41666V6.41663Z"
              fill="#8A8F99"
            />
          </svg>
        </span>
      </div>
    </div>
  </div>
</body>
`;

exports[`IconTipsLabel should match snapshot 2`] = `
<body>
  <div>
    <div
      class="ant-space ant-space-horizontal ant-space-align-center"
    >
      <div
        class="ant-space-item"
        style="margin-right: 8px;"
      >
        <span
          aria-label="info-circle"
          class="anticon anticon-info-circle text-orange ant-tooltip-open"
          role="img"
        >
          <svg
            aria-hidden="true"
            data-icon="info-circle"
            fill="currentColor"
            focusable="false"
            height="1em"
            viewBox="64 64 896 896"
            width="1em"
          >
            <path
              d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm0 820c-205.4 0-372-166.6-372-372s166.6-372 372-372 372 166.6 372 372-166.6 372-372 372z"
            />
            <path
              d="M464 336a48 48 0 1096 0 48 48 0 10-96 0zm72 112h-48c-4.4 0-8 3.6-8 8v272c0 4.4 3.6 8 8 8h48c4.4 0 8-3.6 8-8V456c0-4.4-3.6-8-8-8z"
            />
          </svg>
        </span>
      </div>
      <div
        class="ant-space-item"
      >
        <p>
          123
        </p>
      </div>
    </div>
  </div>
  <div
    style="position: absolute; top: 0px; left: 0px; width: 100%;"
  >
    <div>
      <div
        class="ant-tooltip"
        style="opacity: 0;"
      >
        <div
          class="ant-tooltip-content"
        >
          <div
            class="ant-tooltip-arrow"
          >
            <span
              class="ant-tooltip-arrow-content"
            />
          </div>
          <div
            class="ant-tooltip-inner"
            role="tooltip"
          >
            this is tips
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`IconTipsLabel should match snapshot 3`] = `
<body>
  <div>
    <div
      class="ant-space ant-space-horizontal ant-space-align-center"
    >
      <div
        class="ant-space-item"
        style="margin-right: 8px;"
      >
        <span
          aria-label="info-circle"
          class="anticon anticon-info-circle text-orange ant-tooltip-open"
          role="img"
          style="font-size: 14px; margin-left: 10px;"
        >
          <svg
            aria-hidden="true"
            data-icon="info-circle"
            fill="currentColor"
            focusable="false"
            height="1em"
            viewBox="64 64 896 896"
            width="1em"
          >
            <path
              d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm0 820c-205.4 0-372-166.6-372-372s166.6-372 372-372 372 166.6 372 372-166.6 372-372 372z"
            />
            <path
              d="M464 336a48 48 0 1096 0 48 48 0 10-96 0zm72 112h-48c-4.4 0-8 3.6-8 8v272c0 4.4 3.6 8 8 8h48c4.4 0 8-3.6 8-8V456c0-4.4-3.6-8-8-8z"
            />
          </svg>
        </span>
      </div>
      <div
        class="ant-space-item"
      >
        <p>
          123
        </p>
      </div>
    </div>
  </div>
  <div
    style="position: absolute; top: 0px; left: 0px; width: 100%;"
  >
    <div>
      <div
        class="ant-tooltip"
        style="opacity: 0;"
      >
        <div
          class="ant-tooltip-content"
        >
          <div
            class="ant-tooltip-arrow"
          >
            <span
              class="ant-tooltip-arrow-content"
            />
          </div>
          <div
            class="ant-tooltip-inner"
            role="tooltip"
          >
            this is tips
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;
